Zeroconf ApiServer (#128)
* Add Zeroconf Apiserver functionality
xyz.gianlu.librespot.core.ZeroconfServer now extends java.util.Observable, notifies observers when a new Session is created
add method xyz.gianlu.librespot.api.server.ApiServer.clearHandlers(), clears the ApiHandlers Map
add class ZeroconfApiServer, extends xyz.gianlu.librespot.api.server.ApiServer, observes the ZeroconfServer, updates when a new Session is created in ZeroconfServer

* fix Observer not getting updated
Session had to be authenticated before registering request handlers

* Moved from Observable to Listener pattern
Observer and Observable is deprecated in java 11+

* removed unused imports

* Minor refactoring